--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="display" id="word-display">
         WORD
     </div>
+    <h1 class="debug">Debugger</h1>
     <script type="text/javascript" src="js/function.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
