--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
 </head>
 
 <body>
-    <div class="display" id="word-display">
+    <header class="status">
+        HEADER
+    </header>
+    <div class="middle">
+
+    </div>
+    <!-- <div class="display" id="word-display">
         WORD
     </div>
     <h1 class="display" id='status-display'></h1>
-    <h1 class="debug">Debugger</h1>
+    <h1 class="debug">Debugger</h1> -->
+
+    <footer class="input">
+        FOOTER
+    </footer>
+
     <script type="text/javascript" src="js/function.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/display.js"></script>
+    <!-- -<script type="text/javascript" src="js/script.js"></script> -->
 </body>
 
 </html>
