--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         FOOTER
     </footer>
 
-    <script type="text/javascript" src="js/function.js"></script>
+
     <script type="text/javascript" src="js/display.js"></script>
+    <script type="text/javascript" src="js/functions.js"></script>
     <!-- -<script type="text/javascript" src="js/script.js"></script> -->
 </body>
 
