--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Type Defuser</title>
+    <title>_TYPE</title>
 </head>
 
 <body>
@@ -25,8 +25,9 @@
     </footer>
 
 
-    <script type="text/javascript" src="js/display.js"></script>
+    <script type="text/javascript" src="js/dom.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="js/control.js"></script>
     <!-- -<script type="text/javascript" src="js/script.js"></script> -->
 </body>
 
