Perform minor design cleanup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="status">
-        HEADER
+        TYPE
     </header>
     <div class="middle">
 
@@ -21,9 +21,8 @@
     <h1 class="debug">Debugger</h1> -->
 
     <footer class="input">
-        FOOTER
+        ...
     </footer>
-
 
     <script type="text/javascript" src="js/dom.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
