Add konami, speech, status/score display

--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 
 <body>
     <header class="status">
-        TYPE
+        <p id="score">SCORE:</p>
+        <p>TYPIST</p>
+        <p id="current-status">STATUS</p>
     </header>
     <div class="middle">
 
     </div>
-    <!-- <div class="display" id="word-display">
-        WORD
-    </div>
-    <h1 class="display" id='status-display'></h1>
-    <h1 class="debug">Debugger</h1> -->
 
     <footer class="input">
         ...
