--- a/index.html
+++ b/index.html
@@ -3,28 +3,35 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
     <title>_TYPE</title>
 </head>
 
 <body>
-    <header class="status">
-        <p id="score">SCORE:</p>
-        <p>TYPIST</p>
-        <p id="current-status">STATUS</p>
+    <header class="status container-fluid">
+        <div class="row justify-content-center">
+            <div class="col text-left" id="score">SCORE</div>
+            <div class="col text-center">TYPIST</div>
+            <div class="col text-right" id="current-status">STATUS</div>
+        </div>
     </header>
-    <div class="middle">
+    <div class="middle h-100 container-fluid ">
 
     </div>
 
-    <footer class="input">
+    <footer class="input fixed-bottom text-center small">
         ...
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/dom.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/control.js"></script>
-    <!-- -<script type="text/javascript" src="js/script.js"></script> -->
 </body>
 
 </html>
