--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <link rel="stylesheet" href="css/style.css">
     <title>_TYPE</title>
 </head>
 
 <body>
-    <header class="status container-fluid">
+    <header class="status sticky-top">
         <div class="row justify-content-center">
             <div class="col text-left" id="score">SCORE</div>
-            <div class="col text-center">TYPIST</div>
+            <div class="col text-center">TYPEFALL</div>
             <div class="col text-right" id="current-status">STATUS</div>
         </div>
     </header>
