Improved animations and styling

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
     <header class="status sticky-top">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center h-100">
             <div class="col text-left" id="score">SCORE</div>
-            <div class="col text-center">TYPEFALL</div>
+            <div class="col text-center" id="title">TYPEFALL</div>
             <div class="col text-right" id="current-status">STATUS</div>
         </div>
     </header>
-    <div class="middle h-100 container-fluid ">
+    <div class="middle container-fluid">
 
     </div>
 
