Add working loss

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 <body>
     <header class="status sticky-top">
         <div class="row justify-content-center h-100">
-            <div class="col text-left" id="score">SCORE</div>
+            <div class="col text-left">SCORE<br>
+                <span id="score"></span>
+            </div>
             <div class="col text-center" id="title">TYPEFALL</div>
-            <div class="col text-right" id="current-status">STATUS</div>
+            <div class="col text-right">STATUS<br>
+                <span id="current-status" ></span>
+            </div>
         </div>
     </header>
     <div class="middle container-fluid">
 
     </div>
 
-    <footer class="input fixed-bottom text-center small">
+    <footer class="input fixed-bottom text-center">
         ...
     </footer>
 
