Push working copy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <div class="col" id="input">
 
                 </div>
-                <div class="col">
+                <div class="col" id="message">
+                    Type start to begin
                 </div>
             </div>
         </div>
