Add win/lose screen

--- a/index.html
+++ b/index.html
@@ -11,21 +11,30 @@
 </head>
 
 <body>
-    <header class="status sticky-top">
+    <!-- HEADER -->
+    <header class="status fixed-top">
         <div class="row justify-content-center h-100">
             <div class="col text-left">SCORE<br>
                 <span id="score"></span>
             </div>
             <div class="col text-center" id="title">TYPEFALL</div>
             <div class="col text-right">STATUS<br>
-                <span id="current-status" ></span>
+                <span id="status-message" ></span>
             </div>
         </div>
     </header>
+    <!-- MIDDLE -->
     <div class="middle container-fluid">
-
     </div>
-
+    <!-- DISPLAY -->
+    <div class="display container-fluid h-100">
+        <div class="row align-items-center justify-content-center h-100">
+            <div class="col-12">
+                <p class="text-center" id="display-message">display</p>
+            </div>
+        </div>
+    </div>
+    <!-- FOOTER -->
     <footer class="fixed-bottom text-center">
         <div class="container">
             <div class="row">
