--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="display container-fluid h-100">
         <div class="row align-items-center justify-content-center h-100">
             <div class="col-12">
-                <p class="text-center" id="display-message">display</p>
+                <p class="text-center" id="display-message">TYPE<span id="fall">FALL</span></p>
             </div>
         </div>
     </div>
